--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^0.13.4
   lottie: ^1.4.2
   sqflite: ^2.0.3+1
+  intl: ^0.17.0
+  flutter_local_notifications: ^9.9.1
+  rxdart: ^0.27.5
+  android_alarm_manager_plus: ^2.0.6+1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
